Use page generating rather than client side script

--- a/static/style.css
+++ b/static/style.css
@@ -103,6 +103,11 @@ code {
   font-weight: bold;
 }
 
+footer {
+  font-size: 60%;
+  color: #ccc;
+}
+
 .github-ribbon {
   position: absolute;
   top: 0;
