--- a/static/style.css
+++ b/static/style.css
@@ -103,6 +103,31 @@ code {
   font-weight: bold;
 }
 
+.issues {
+  font-size: 16px;
+  margin-bottom: 1em;
+}
+
+.issues > summary {
+  cursor: pointer;
+}
+
+.label {
+  background-color: #f7e101;
+  border-radius: 2px;
+  font-size: 12px;
+  height: 20px;
+  line-height: 20px;
+  display: inline-block;
+  padding: .15em 4px;
+  box-shadow: inset 0 -1px 0 rgba(27,31,35,.12);
+  vertical-align: top;
+}
+
+.closed {
+  text-decoration: line-through;
+}
+
 footer {
   font-size: 60%;
   color: #ccc;
