Replace ecosystem section with a more descriptive way

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,12 @@
 </ul>
 <h2><code>async</code> ecosystem</h2>
 <ul id="async-ecosystem">
-  {{ macros::render_items(items=items.async_ecosystem) }}
+  <li>
+    <a href="https://crates.io/crates/tokio">tokio</a> -
+    experimental <code>async</code>/<code>await</code> support is provided with
+    the <code>async-await-preview</code> feature flag.
+    / <a href="https://github.com/tokio-rs/tokio/issues/804">#804</a>
+  </li>
 </ul>
 <footer>Generated at {{ time }}</footer>
 <a class="github-ribbon" href="https://github.com/upsuper/areweasyncyet.rs">Fork me on GitHub</a>
