--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,12 @@
     to enable people to experiment with the new syntax.
   </li>
 </ul>
+<h2>Posts about <code>async</code></h2>
+<ul id="async-posts">
+  {%- for post in posts | reverse %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date }}</li>
+  {%- endfor %}
+</ul>
 <footer>Generated at {{ time }}</footer>
 <a class="github-ribbon" href="https://github.com/rust-net-web/areweasyncyet.rs">Fork me on GitHub</a>
 </body>
