Add thin_main_loop crate

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,12 @@
     as well as the <code>async</code>/<code>await</code> syntax
     to enable people to experiment with the new syntax.
   </li>
+  <li>
+    <a href="https://crates.io/crates/thin_main_loop">thin_main_loop</a> -
+    An experimental, cross platform, main loop and futures executor/reactor, 
+    that binds to the OS APIs suitable for making native GUI applications. 
+    It supports callbacks as well as the <code>async</code>/<code>await</code> syntax.
+  </li>
 </ul>
 <h2>Posts about <code>async</code></h2>
 <ul id="async-posts">
