Bold async io is possible

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <p>For <code>async</code> syntax, not yet, but progress is being made!</p>
 <p>
   Although the more ergonomic syntax is not ready yet,
-  asynchronous I/O is already possible in Rust with
+  <strong>asynchronous I/O is already possible in Rust</strong> with
   ecosystem around <a href="https://crates.io/crates/futures">futures</a>,
   <a href="https://crates.io/crates/mio">mio</a>, and
   <a href="https://crates.io/crates/tokio">tokio</a>.
