--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,10 @@
   </li>
   <li>
     <a href="https://github.com/rustasync/runtime">runtime</a> -
-    A thin layer that sits between your code and the backing runtimes, that 
-    provided imagine async APIs could look like if they were part of stdlib.
+    A platform-agnostic library that intends
+    to make async Rust both flexible and easy.
+    It was announced by the Async Ecosystem WG as
+    an exploration towards ecosystem standardization.
   </li>
 </ul>
 <h2>Posts about <code>async</code></h2>
