--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Are we async yet?</title>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" href="favicon.ico">
 <body>
 <h1>Are we <code>async</code> yet?</h1>
 <p>For <code>async</code> syntax, not yet, but progress is being made!</p>
