--- a/static/style.css
+++ b/static/style.css
@@ -105,7 +105,7 @@ code {
 
 .issues {
   font-size: 16px;
-  margin-bottom: 1em;
+  margin-bottom: .5em;
 }
 
 .issues > summary {
@@ -122,6 +122,11 @@ code {
   padding: .15em 4px;
   box-shadow: inset 0 -1px 0 rgba(27,31,35,.12);
   vertical-align: top;
+}
+
+.deps {
+  font-size: 1.5rem;
+  margin-bottom: .5em;
 }
 
 .closed {
