--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
     It supports callbacks as well as the <code>async</code>/<code>await</code> syntax.
   </li>
   <li>
-    <a href="https://github.com/rustasync/runtime">runtime</a> -
+    <a href="https://crates.io/crates/runtime">runtime</a> -
     A platform-agnostic library that intends
     to make async Rust both flexible and easy.
     It was announced by the Async Ecosystem WG as
