Link to async fn in traits workaround

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -8,6 +8,9 @@
           title="{{ item.unresolved.issue.title }}">unresolved</a>
         {%- continue %}
       {%- endif %}
+      {%- if item.link %}
+        <a href="{{ item.link.url }}">{{ item.link.text | codify }}</a>
+      {%- endif %}
       {%- if not item.stabilized %}
         <span class="not-stabilized">not stabilized yet</span>
       {%- else %}
