Update on Tokio alpha release

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,8 @@
   <li>
     <a href="https://crates.io/crates/tokio">tokio</a> -
     An event-driven, non-blocking I/O platform for writing asynchronous applications.
-    It has experimental <code>async</code>/<code>await</code> support provided behind
-    the <code>async-await-preview</code> feature flag.
-    / <a href="https://github.com/tokio-rs/tokio/issues/804">#804</a>
+    It has <code>async</code>/<code>await</code> support starting from 0.2.0-alpha.1
+    <a href="https://github.com/tokio-rs/tokio/issues/1201">#1201</a>
   </li>
   <li>
     <a href="https://crates.io/crates/romio">romio</a> -
