Add async-std to ecosystem

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,14 @@
     It was announced by the Async Ecosystem WG as
     an exploration towards ecosystem standardization.
   </li>
+  <li>
+    <a href="https://crates.io/crates/async-std">async-std</a> -
+    Async version of the Rust standard library.
+  </li>
+  <li>
+    <a href="https://crates.io/crates/async-task">async-task</a> -
+    Task abstraction for building executors.
+  </li>
 </ul>
 <h2>Posts about <code>async</code></h2>
 <ul id="async-posts">
