Update the answer of are we async yet

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="favicon.ico">
 <body>
 <h1>Are we <code>async</code> yet?</h1>
-<p>For <code>async</code> syntax, not yet, but progress is being made!</p>
+<p>For <code>async</code> syntax, not yet, but <strong>almost</strong>!</p>
 <p>
   Although the more ergonomic syntax is not ready yet,
   <strong>asynchronous I/O is already possible in Rust</strong> with
