Fix description post-stabilization

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <p>
   You can use it with the active ecosystem of asynchronous I/O around
   <a href="https://crates.io/crates/futures">futures</a>,
-  <a href="https://crates.io/crates/mio">mio</a>, and
+  <a href="https://crates.io/crates/mio">mio</a>,
   <a href="https://crates.io/crates/tokio">tokio</a>, and
   <a href="https://crates.io/crates/async-std">async-std</a>.
 </p>
