Add actix to ecosystem
Closes #31.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,10 @@
     <code>async</code>/<code>await</code> syntax.
   </li>
   <li>
+    <a href="https://crates.io/crates/actix">actix</a> -
+    A actors framework providing higher-level abstraction for tokio.
+  </li>
+  <li>
     <a href="https://crates.io/crates/thin_main_loop">thin_main_loop</a> -
     An experimental, cross platform, main loop and futures executor/reactor, 
     that binds to the OS APIs suitable for making native GUI applications. 
